2023 05 02 패키지구조

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
 	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
 	implementation 'org.glassfish.jaxb:jaxb-core:4.0.2'
 	implementation 'com.sun.xml.bind:jaxb1-impl:2.2.5.1'
-	compileOnly 'org.projectlombok:lombok'
+    testImplementation 'junit:junit:4.13.1'
+    compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
