--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
-
+	implementation 'org.springframework.boot:spring-boot-starter-json'
 
 	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
 	implementation 'javax.activation:activation:1.1'
@@ -31,7 +31,8 @@ dependencies {
 	implementation 'org.glassfish.jaxb:jaxb-core:4.0.2'
 	implementation 'javax.activation:activation:1.1.1'
 	implementation 'com.sun.xml.bind:jaxb1-impl:2.2.5.1'
-    testImplementation 'junit:junit:4.13.1'
+	implementation 'org.glassfish:jsonp-jaxrs-1x:1.1.6'
+	testImplementation 'junit:junit:4.13.1'
 
     compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
