--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/serverMonitor?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/servermonitor?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: admin
+mybatis:
+  mapper-locations: classpath:/mapper/*.xml
+
